Fixed Collapse and styled tables

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1 {
 p {
     
 }
-.collapsible {
+.collapsible,.collapsible-two {
   background-color: #777;
   color: white;
   cursor: pointer;
@@ -32,7 +32,7 @@ p {
   outline: none;
   font-size: 15px;
 }
-.active, .collapsible:hover {
+.active, .collapsible:hover, .collapsible-two {
   background-color: #555;
 }
 
@@ -43,7 +43,15 @@ p {
   background-color: #f1f1f1;
 }
 table {
+    font-size: 1.4em;
     background-color:lightgray;
     text-align: left;
-    
+}
+table,th,td {
+    border: 2px solid black;
+    border-collapse: collapse;
+}
+tr:nth-child(even)
+{
+    background-color:white;
 }
